--- a/ppmtool/src/main/resources/application.properties
+++ b/ppmtool/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+# DataSource settings: set here your own configurations for the MySQL database
+spring.datasource.url=jdbc:mysql://localhost:3306/ppmtool
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=5266
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
