--- a/ppmtool/src/main/resources/application.properties
+++ b/ppmtool/src/main/resources/application.properties
@@ -1,21 +1,1 @@
-# !!! This file should NEVER push to git public repo !!!
-# !!! This file should NEVER push to git public repo !!!
-# !!! This file should NEVER push to git public repo !!!
-
-# DataSource settings: set here your own configurations for the MySQL database
-
-# Local database
-#spring.datasource.url=jdbc:mysql://localhost:3306/ppmtool
-# spring.datasource.password=5266
-
-# Aliyun server
-server.port=8080
-# Aliyun database
-spring.datasource.url=jdbc:mysql://47.120.63.150:3306/ppmtool
-spring.datasource.password=38447311
-
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Please contact author
